// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries reducer INIT_QUERY should init correctly 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should correctly update 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should correctly update a query with a $gt: null selector 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "_id": Object {
          "$gt": null,
        },
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should correctly update a query with a selector 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should correctly update a sorted query with a deleted document 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": Array [
        "date",
      ],
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": false,
      },
      "skip": undefined,
      "sort": Array [
        Object {
          "date": "asc",
        },
      ],
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should correctly update two queries 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should not add documents to another query if autoUpdate.add was set to false 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": Object {
      "autoUpdate": Object {
        "add": false,
      },
    },
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should not crash if data is null 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": "not-existing-doc",
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should not remove documents from another query if autoUpdate.remove was set to false 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 2,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": Object {
      "autoUpdate": Object {
        "remove": false,
      },
    },
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should not update a query not concerned even with a selector 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": false,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;

exports[`queries reducer updates should update a query with a partiel index 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 3,
    "data": Array [
      "todo_1",
      "todo_2",
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "fetchedPagesCount": 1,
    "hasMore": false,
    "id": "a",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
  "b": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": Object {
        "done": false,
      },
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "fetchedPagesCount": 0,
    "hasMore": false,
    "id": "b",
    "isFetching": null,
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
    "relationshipNames": Array [],
    "storeData": Array [],
  },
}
`;
